--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <!--<h2>Biography [<a href="./yumingli.pdf">CV</a>]</h2>-->
 <h2>Biography</h2>
 <p>
-	</p><div style="text-align:justify">I was born in Xining City, Qinghai Province, China, in 1997. I obtained my B.E. degrees in automation from Dept. of Artificial Intelligence,  <a href="http://www.njau.edu.cn/"> Nanjing Agricultural University</a> in 2020, under the supervision of <a href="http://ai.njau.edu.cn/info/1056/1159.htm">Prof. Wei Lu</a>.
- I am currently pursuing the M.S. degree in electronic information with the Dept. of Unmanned system Research, <a href="https://www.nwpu.edu.cn/">Northwestern Polytechnical University</a>, under the supervision of <a href="https://teacher.nwpu.edu.cn/ywfang.html">Prof. Yangwang Fang</a>. </div>
+	</p><div style="text-align:justify">I was born in Xining City, Qinghai Province, China, in 1997. I obtained my B.E. degrees in automation from <a href="http://ai.njau.edu.cn/#"> Dept. of Artificial Intelligence</a>,  <a href="http://english.njau.edu.cn/"> Nanjing Agricultural University</a> in 2020, under the supervision of <a href="http://ai.njau.edu.cn/info/1056/1159.htm">Prof. Wei Lu</a>.
+ I am currently pursuing the M.S. degree in electronic information with the Dept. of <a href="https://wurenxitong.nwpu.edu.cn/#">Unmanned system Research</a> , <a href="http://en.nwpu.edu.cn/">Northwestern Polytechnical University</a>, under the supervision of <a href="https://teacher.nwpu.edu.cn/ywfang.html">Prof. Yangwang Fang</a>. </div>
 <p></p>
 
 <h2>Education</h2>
@@ -84,7 +84,7 @@
 <h2>Language proficiency</h2>
 <ul>
 	<li>
-		English: Advanecd.
+		English: Advanced.
 	</li>
 </ul>
 
@@ -102,7 +102,7 @@
 <h3>Conference Papers</h3>
 <ol>
                   <li>
-                         <strong>Jiacheng Li</strong>, Yangwang Fang &quot;<a class="dhtgD aw5Odc" href="http://www.case2021.org/" target="_blank">Collision avoidance for cooperative UAVs with improved artificial potential field approach based on transmission light model</a>,&quot; IEEE 17th International Conference on Automation Science and Engineering (CASE), 2021 (EI, Reviewed by IEEE Xplore) (Under review).
+                         <strong>Jiacheng Li</strong>, Yangwang Fang &quot;<a class="dhtgD aw5Odc" href="https://icus2021.c2.org.cn/">Collision avoidance for cooperative UAVs with improved artificial potential field approach based on transmission light model</a>,&quot;  IEEE International Conference on Unmanned Systems (ICUS 2021), 2021 (EI, Reviewed by IEEE Xplore) (Under review).
 	</li>
                  <li>
                          <strong>Jiacheng Li</strong>, Wei Lu, Yankai Li, Mengjie Zeng, Ling Wang, Yongnian Zhang &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9326587/authors#authors" target="_blank">Tractor steering teleoperation control with fuzzy PID algorithm based on delay time measurement with timestamp</a>,&quot; Chinese Automation Congress (CAC), 2020 (EI, Reviewed by IEEE Xplore).
@@ -114,7 +114,7 @@
 <ol>
 	<li>
 		<!--卢伟, <strong>李家诚</strong>, 陈浩,  <a href="http://www.soopat.com/Patent/202010972488">"一种基于时间戳的车辆遥操作时延控制方法"</a>,  CN Patent, 112084988A, 2020.-->
-                                      卢伟, <strong>李家诚</strong>, 陈浩, "一种基于时间戳的车辆遥操作时延控制方法"</a>,  CN Patent (Under review).
+                                      Wei Lu, <strong>Jiacheng Li</strong>, Hao chen, "A time delay control method for vehicle teleoperation based on time stamp "</a>,  CN Patent (Under review)(in chinese).
 	</li>
 	
 </ol>
@@ -132,13 +132,19 @@
 		Collision avoidance control of cooperative UAVs.
 	</li>
 	<td><img src="./JC_L_files/avoid.png" border="0" height="145"><br></td>
+                         <video muted controls="controls" autoplay="autoplay" loop="loop" width="320" height="240">
+		<source src="./JC_L_files/c1.mp4" type="video/mp4">
+		<source src="./JC_L_files/c1.mp4" type="video/ogg">
+       		<source src="./JC_L_files/c1.mp4" type="video/webm">
+		Your browser does not support the video tag.
+	</video>
 	<li>
 		Unmanned driving robot of tractor.
 	</li>
 	<td><img src="./JC_L_files/robot.png" border="0" height="280"><br></td>
 	
 </ul>
-	<center>© Jiacheng LI | Last updated: 3/2021</center>
+	<center>© Jiacheng LI | Last updated: 6/2021</center>
     <!--<center>© Jiacheng_Li
     	<script type="text/javascript" language="javascript">
     	if (Date.parse(document.lastModified) != 0) document.write(" | Last updated: " + document.lastModified);</script>
