--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<li>
 		Unmanned aerial vehicles (UAVs) control
 		<ul>
-			<li>Collision avoidance control of cooperative UAVs, UAVs formation control.</li>
+			<li>Collision avoidance control of cooperative UAVs, UAVs formation control，Swarm control.</li>
 		</ul>	
 	</li>
 	<li>
@@ -89,32 +89,41 @@
 </ul>
 
 
-
 <h2>Publications</h2>
 <h3>Journal Papers</h3>
 <ol>
 	<li>
-                         Wei Lu, <strong>Jiacheng Li</strong>, Yankai Li, Bin Hu, Zhongliang Tang, and Huanhuan Qin &quot;Dual-mode Control Method of Unmanned Tractor with High Reliability and Security</a>,&quot; IEEE Transactions on Industrial Informatics, 2021 (SCI) (First author is tutor) (Under review).
+                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot;Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field</a>,&quot; Transactions of the Institute of Measurement and Control, 2022 (SCI, IF:1.956) (Accepted).
 	</li>
+	<li>
+                         Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;Dual-mode Control Method of Unmanned Tractor with High Reliability and Security</a>,&quot; IEEE/CAA Journal of Automatica Sinica, 2022 (Top, SCI, IF:6.171) (First author is tutor) (Accepted).
+	</li>
+	<li>
+                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot;Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; IEEE Systems Journal, 2021 (SCI, IF:3.931) (Under review).
+	</li>
+                 <li>
+                          <strong>Jiacheng Li</strong>, Yangwang Fang, Dengxiu Yu, Wenhui Ma, &quot;UAV Swarm Control based on Simulated Bird Flock Maneuvering and Turning </a>,&quot; IEEE Transactions on Industrial Informatics, 2022(Top, SCI, IF:10.215) (Under review).
+	</li>
+
 	
 </ol>
 
 <h3>Conference Papers</h3>
 <ol>
-                  <li>
-                         <strong>Jiacheng Li</strong>, Yangwang Fang &quot;<a class="dhtgD aw5Odc" href="https://icus2021.c2.org.cn/">Collision avoidance for cooperative UAVs with improved artificial potential field approach based on transmission light model</a>,&quot;  IEEE International Conference on Unmanned Systems (ICUS 2021), 2021 (EI, Reviewed by IEEE Xplore) (Under review).
-	</li>
-                 <li>
+               <li>
                          <strong>Jiacheng Li</strong>, Wei Lu, Yankai Li, Mengjie Zeng, Ling Wang, Yongnian Zhang &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9326587/authors#authors" target="_blank">Tractor steering teleoperation control with fuzzy PID algorithm based on delay time measurement with timestamp</a>,&quot; Chinese Automation Congress (CAC), 2020 (EI, Reviewed by IEEE Xplore).
 	</li>
+                  <li>
+                         <strong>Jiacheng Li</strong>, Yangwang Fang，et al &quot;Affine Transformation Control of UAV Formation based on Predetermined Time Convergence </a>,&quot;  2022 6th International Conference on Automation, Control and Robotics (ICACR 2022), 2022 (EI) (Under review).
+	</li>
+                 
 
 </ol>
 
 <h3>Patents</h3>
 <ol>
 	<li>
-		<!--卢伟, <strong>李家诚</strong>, 陈浩,  <a href="http://www.soopat.com/Patent/202010972488">"一种基于时间戳的车辆遥操作时延控制方法"</a>,  CN Patent, 112084988A, 2020.-->
-                                      Wei Lu, <strong>Jiacheng Li</strong>, Hao chen, "A time delay control method for vehicle teleoperation based on time stamp "</a>,  CN Patent (Under review)(in chinese).
+                                      Wei Lu, <strong>Jiacheng Li</strong>, Hao chen, "A time delay control method for vehicle teleoperation based on time stamp "</a>,  CN Patent：202010438526 (in chinese).
 	</li>
 	
 </ol>
@@ -144,7 +153,7 @@
 	<td><img src="./JC_L_files/robot.png" border="0" height="280"><br></td>
 	
 </ul>
-	<center>© Jiacheng LI | Last updated: 6/2021</center>
+	<center>© Jiacheng LI | Last updated: 3/2022</center>
     <!--<center>© Jiacheng_Li
     	<script type="text/javascript" language="javascript">
     	if (Date.parse(document.lastModified) != 0) document.write(" | Last updated: " + document.lastModified);</script>
