--- a/index.html
+++ b/index.html
@@ -63,20 +63,20 @@
 	<li>
 		Unmanned aerial vehicles (UAVs) control
 		<ul>
-			<li>Collision avoidance control of cooperative UAVs, UAVs formation control，Swarm control.</li>
+			<li>UAVs Formation Control，Swarm Control，Collision Avoidance Control of Cooperative UAVs.</li>
 		</ul>	
 	</li>
 	<li>
 		Robot control
 		<ul>
-			<li>Robot sensing detection and control application.</li>
+			<li>Robot Sensing Detection and Control Application.</li>
 		</ul>
 		
 	</li>
 	<li>
 		Teleoperation
 		<ul>
-			<li>Teleoperation time delay control and practical application.</li>
+			<li>Teleoperation Time Delay Control and Practical Application.</li>
 		</ul>
 	</li>
 </ul>
