--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<li>
 		Unmanned aerial vehicles (UAVs) control
 		<ul>
-			<li>UAVs Formation Control，Swarm Control，Collision Avoidance Control of Cooperative UAVs.</li>
+			<li>UAVs Formation Control, Swarm Control, Collision Avoidance Control of Cooperative UAVs.</li>
 		</ul>	
 	</li>
 	<li>
