--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="keywords" content="Jiacheng LI">
     <meta name="description" content="jiacheng LI&#39;s home page">
@@ -43,7 +44,7 @@
 <!--<h2>Biography [<a href="./yumingli.pdf">CV</a>]</h2>-->
 <h2>Biography</h2>
 <p>
-	</p><div style="text-align:justify">I was born in Xining City, Qinghai Province, China, in 1997. I obtained my B.E. degrees in automation from <a href="http://ai.njau.edu.cn/#"> Dept. of Artificial Intelligence</a>,  <a href="http://english.njau.edu.cn/"> Nanjing Agricultural University</a> in 2020, under the supervision of <a href="http://ai.njau.edu.cn/info/1056/1159.htm">Prof. Wei Lu</a>.
+	</p><div style="text-align:justify">I was born in Xining City, Qinghai Province, China, in 1997. I obtained my B.E. degrees in automation from <a href="http://ai.njau.edu.cn/#"> Dept. of Artificial Intelligence</a>,  <a href="http://english.njau.edu.cn/"> Nanjing Agricultural University</a> in 2020, under the supervision of <a href="http://ai.njau.edu.cn/info/1056/1159.htm">A/Prof. Wei Lu</a>.
  I am currently pursuing the M.S. degree in electronic information with the Dept. of <a href="https://wurenxitong.nwpu.edu.cn/#">Unmanned system Research</a> , <a href="http://en.nwpu.edu.cn/">Northwestern Polytechnical University</a>, under the supervision of <a href="https://teacher.nwpu.edu.cn/ywfang.html">Prof. Yangwang Fang</a>. </div>
 <p></p>
 
@@ -93,16 +94,16 @@
 <h3>Journal Papers</h3>
 <ol>
 	<li>
-                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot;Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field</a>,&quot; Transactions of the Institute of Measurement and Control, 2022 (SCI, IF:1.956) (Accepted).
+                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot;Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field</a>,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022 (<strong>SCI, IF:1.956</strong>) (Accepted, Awaiting Production).   <a href="./JC_L_files/TIMC.pdf" download="TIMC2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
-                         Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;Dual-mode Control Method of Unmanned Tractor with High Reliability and Security</a>,&quot; IEEE/CAA Journal of Automatica Sinica, 2022 (Top, SCI, IF:6.171) (First author is tutor) (Accepted).
+                         Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;Dual-mode Control Method of Unmanned Tractor with High Reliability and Security</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022 (<strong>Top, SCI, IF:6.171</strong>) (First author is tutor) (Accepted, Awaiting Production).   <a href="./JC_L_files/IEEE CAA JAS.pdf" download="IEEE CAA JAS2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
-                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot;Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; IEEE Systems Journal, 2021 (SCI, IF:3.931) (Under review).
+                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot;Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2021 (<strong>SCI, IF:3.931</strong>) (Under review).   <a href="./JC_L_files/ISJ.pdf" download="ISJ2021ljc.pdf"><strong>PDF</strong></a>
 	</li>
                  <li>
-                          <strong>Jiacheng Li</strong>, Yangwang Fang, Dengxiu Yu, Wenhui Ma, &quot;UAV Swarm Control based on Simulated Bird Flock Maneuvering and Turning </a>,&quot; IEEE Transactions on Industrial Informatics, 2022(Top, SCI, IF:10.215) (Under review).
+                          <strong>Jiacheng Li</strong>, Yangwang Fang, Wenhui Ma, Zihao Wu, Shuaiqi Huangfu, Dengxiu Yu, C. L. Philip Chen, &quot;UAV swarm coordination based on parallel control </a>,&quot; <i>IEEE Transactions on Cybernetics</i>, 2022(<strong>Top, SCI, IF:11.448</strong>) (Under review).    <a href="./JC_L_files/TCYB.pdf" download="TCYB2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 
 	
@@ -111,10 +112,10 @@
 <h3>Conference Papers</h3>
 <ol>
                <li>
-                         <strong>Jiacheng Li</strong>, Wei Lu, Yankai Li, Mengjie Zeng, Ling Wang, Yongnian Zhang &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9326587/authors#authors" target="_blank">Tractor steering teleoperation control with fuzzy PID algorithm based on delay time measurement with timestamp</a>,&quot; Chinese Automation Congress (CAC), 2020 (EI, Reviewed by IEEE Xplore).
+                         <strong>Jiacheng Li</strong>, Wei Lu, Yankai Li, Mengjie Zeng, Ling Wang, Yongnian Zhang &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9326587/authors#authors" target="_blank">Tractor steering teleoperation control with fuzzy PID algorithm based on delay time measurement with timestamp</a>,&quot; <i>Chinese Automation Congress (CAC)</i>, 2020 (EI, Reviewed by IEEE Xplore).      <a href="./JC_L_files/CAC2020.pdf" download="CAC2020ljc.pdf"><strong>PDF</strong></a>
 	</li>
                   <li>
-                         <strong>Jiacheng Li</strong>, Yangwang Fang，et al &quot;Affine Transformation Control of UAV Formation based on Predetermined Time Convergence </a>,&quot;  2022 6th International Conference on Automation, Control and Robotics (ICACR 2022), 2022 (EI) (Under review).
+                         <strong>Jiacheng Li</strong>, Yangwang Fang, et al &quot;Affine Transformation Control of UAV Formation based on Predetermined Time Convergence </a>,&quot; <i>2022 International Conference on Guidance,Navigation and Control (ICGGNC)</i>, 2022 (EI, Reviewed by IEEE Xplore) (Under review).       <a href="./JC_L_files/ICGNC.pdf" download="ICGNC2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
                  
 
@@ -123,15 +124,37 @@
 <h3>Patents</h3>
 <ol>
 	<li>
-                                      Wei Lu, <strong>Jiacheng Li</strong>, Hao chen, "A time delay control method for vehicle teleoperation based on time stamp "</a>,  CN Patent：202010438526 (in chinese).
+                                      Wei Lu, <strong>Jiacheng Li</strong>, Hao chen, "A time delay control method for vehicle teleoperation based on time stamp "</a>,  CN Patent：202010438526 (in chinese) (First inventor is tutor).      <a href="./JC_L_files/CN1.pdf" download="CN12020ljc.pdf"><strong>PDF</strong></a>
 	</li>
-	
+	<li>
+                                      Wei Lu, <strong>Jiacheng Li</strong>,"An unmanned vehicle control method based on multi-driving mode switching"</a>,  CN Patent (in chinese) (has submitted) (First inventor is tutor).      <a href="./JC_L_files/CN2.pdf" download="CN22022ljc.pdf"><strong>PDF</strong></a>
+	</li>
 </ol>
+
+<h2>Participate in Research Projects</h2>
+<ol>
+	<li>
+                       2018.05-2019.05, Design of tractor teleoperating system based on the cloud platform, <i>Nanjing Agricultural University Student Scientific Research Training (SRT) Project</i>, Student in charge.
+	</li>
+                <li>
+                       2020.10-2021.05, Research on System Resilience Assessment Technology, <i>AVIC Chengdu Flight Design Institute (611)</i>, Main participant.
+                </li>
+                 <li>
+                      2020.10-2021.12, Development of UAV formation collaborative flight control simulation system, <i>Xidian University</i>, Main participant.
+                </li>
+                <li>
+                      2021.12-present, Research on the UAV Autonomous Capability Assessment System for Combat Missions, <i>Air Force Engineering University</i>, Main participant.
+                </li>
+                <li>
+                     2022.3-present, UAV test analysis and evaluation against simulation prototype verification research, <i>China Shipbuilding Industry System Engineering Research Institute</i>, Student in charge. 
+                </li>
+</ol>
+
 
 <h2>Relevant Materials</h2>
 <ol>
 	<li>
-		Former Laboratory link (<a href="https://www.njaurobot.cn/student2/lijiacheng.html">https://www.njaurobot.cn/student2/lijiacheng.html</a>) 
+		Former Laboratory link <a href="https://www.njaurobot.cn">(Intelligent Robot Laboratory)</a>  (<a href="https://www.njaurobot.cn/student2/lijiacheng.html">https://www.njaurobot.cn/student2/lijiacheng.html</a>) 
 	</li>
 </ol>
 
@@ -148,13 +171,40 @@
 		Your browser does not support the video tag.
 	</video>
 	<li>
+		UAV Formation control
+	</li>
+	<td><img src="./JC_L_files/formation.png" border="0" height="250"><br></td>
+	<li>
+		Large-scale UAV swarm coordination control
+	</li>
+	<td><img src="./JC_L_files/swarm.png" border="0" height="270"><br></td>
+	<td><img src="./JC_L_files/Large swarm.png" border="0" height="280"><br></td>
+	<li>
+		Teleoperation of tractor driving robot.
+	</li>
+                 <video muted controls="controls" autoplay="autoplay" loop="loop" width="320" height="240">
+		<source src="./JC_L_files/Tractor.mp4" type="video/mp4">
+		<source src="./JC_L_files/Tractor.mp4" type="video/ogg">
+       		<source src="./JC_L_files/Tractor.mp4" type="video/webm">
+		Your browser does not support the video tag.
+	</video>
+	<li>
 		Unmanned driving robot of tractor.
 	</li>
 	<td><img src="./JC_L_files/robot.png" border="0" height="280"><br></td>
 	
 </ul>
-	<center>© Jiacheng LI | Last updated: 3/2022</center>
-    <!--<center>© Jiacheng_Li
+
+<div id="footer">
+	<div id="footer-text"></div>
+</div>
+	<center>© Jiacheng Li | Last updated: 5/2022</center>
+    <!--<center>© Jiacheng Li
     	<script type="text/javascript" language="javascript">
     	if (Date.parse(document.lastModified) != 0) document.write(" | Last updated: " + document.lastModified);</script>
     </center>-->
+</div>
+
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=7XhFmBhcg-K_Sr5-Skm06Ck_kGRyQyKUhIPpxjbE2Os&cl=ffffff&w=a"></script>
+
+</body></html>
