--- a/index.html
+++ b/index.html
@@ -204,7 +204,5 @@
     	if (Date.parse(document.lastModified) != 0) document.write(" | Last updated: " + document.lastModified);</script>
     </center>-->
 </div>
-
-<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=7XhFmBhcg-K_Sr5-Skm06Ck_kGRyQyKUhIPpxjbE2Os&cl=ffffff&w=a"></script>
-
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=0e1633&w=80&t=n&d=7XhFmBhcg-K_Sr5-Skm06Ck_kGRyQyKUhIPpxjbE2Os&co=0b4975&ct=cdd4d9&cmo=3acc3a&cmn=ff5353'></script>
 </body></html>
