--- a/index.html
+++ b/index.html
@@ -204,5 +204,6 @@
     	if (Date.parse(document.lastModified) != 0) document.write(" | Last updated: " + document.lastModified);</script>
     </center>-->
 </div>
-<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=080808&w=160&t=n&d=7XhFmBhcg-K_Sr5-Skm06Ck_kGRyQyKUhIPpxjbE2Os&co=ffffff&ct=808080&cmo=3acc3a&cmn=ff5353"></script>
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=080808&w=159&t=n&d=7XhFmBhcg-K_Sr5-Skm06Ck_kGRyQyKUhIPpxjbE2Os&co=ffffff&ct=808080&cmo=3acc3a&cmn=ff5353'></script>
+
 </body></html>
