--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <h3>Patents</h3>
 <ol>
 	<li>
-                                      Wei Lu, <strong>Jiacheng Li</strong>, Hao chen, "A time delay control method for vehicle teleoperation based on time stamp "</a>,  CN Patent：CN 11348243 (in chinese) (First inventor is tutor).      <a href="./JC_L_files/CN1.pdf" download="CN12020ljc.pdf"><strong>PDF</strong></a>
+                                      Wei Lu, <strong>Jiacheng Li</strong>, Hao chen, "A time delay control method for vehicle teleoperation based on time stamp "</a>,  CN Patent: CN 11348243 (in chinese) (First inventor is tutor).      <a href="./JC_L_files/CN1.pdf" download="CN12020ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
                                       Wei Lu, <strong>Jiacheng Li</strong>,"An unmanned vehicle control method based on multi-driving mode switching"</a>,  CN Patent (in chinese) (has submitted) (First inventor is tutor).      <a href="./JC_L_files/CN2.pdf" download="CN22022ljc.pdf"><strong>PDF</strong></a>
