--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <!--<h1>Jiacheng LI &nbsp; <img src="pics/name_chs.png" height="40px" style="margin-bottom:-10px"></h1>-->
                         <h1>Jiacheng LI (<strong>李家诚</strong>)</h1>
 				</div>
-				<h3>Master degree candidate, Northwest University of Technology</h3>
+				<h3>Master degree candidate, Northwestern Polytechnical University</h3>
                               
 				<p>
 					Email: &nbsp;&nbsp;<a href="mailto:jiacheng_li@mail.nwpu.edu.cn">jiacheng_li@mail.nwpu.edu.cn</a>
