--- a/index.html
+++ b/index.html
@@ -88,21 +88,20 @@
 	</li>
 </ul>
 
-
 <h2>Publications</h2>
 <h3>Journal Papers</h3>
 <ol>
 	<li>
-                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot;Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field</a>,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022 (<strong>SCI, IF:1.956</strong>) (Accepted, Awaiting Production).   <a href="./JC_L_files/TIMC.pdf" download="TIMC2022ljc.pdf"><strong>PDF</strong></a>
+                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot;Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022 (<strong>SCI, IF:1.956</strong>) (Accepted, Awaiting Production).   <a href="./JC_L_files/TIMC.pdf" download="TIMC2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
-                         Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;Dual-mode Control Method of Unmanned Tractor with High Reliability and Security</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022 (<strong>Top, SCI, IF:6.171</strong>) (First author is tutor) (Accepted, Awaiting Production).   <a href="./JC_L_files/IEEE CAA JAS.pdf" download="IEEE CAA JAS2022ljc.pdf"><strong>PDF</strong></a>
+                         Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;<a class="dhtgD aw5Odc" href="https://www.xml-journal.cn/xmlTypeset/wechatopen/articleFulltext/16169d2b53c843d2b1168dfd14e223a7dc9bcdba7011a070ef2e1da990c173a8" target="_blank">Dual-mode Control Method of Unmanned Tractor with High Reliability and Security</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022 (<strong>Top, SCI, IF:6.171</strong>) (First author is tutor) (Accepted, Awaiting Production).   <a href="./JC_L_files/IEEE CAA JAS.pdf" download="IEEE CAA JAS2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
                           <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot;Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2021 (<strong>SCI, IF:3.931</strong>) (Under review).   <a href="./JC_L_files/ISJ.pdf" download="ISJ2021ljc.pdf"><strong>PDF</strong></a>
 	</li>
                  <li>
-                          <strong>Jiacheng Li</strong>, Yangwang Fang, Wenhui Ma, Zihao Wu, Shuaiqi Huangfu, Dengxiu Yu, C. L. Philip Chen, &quot;UAV swarm coordination based on parallel control </a>,&quot; <i>IEEE Transactions on Cybernetics</i>, 2022(<strong>Top, SCI, IF:11.448</strong>) (Under review).    <a href="./JC_L_files/TCYB.pdf" download="TCYB2022ljc.pdf"><strong>PDF</strong></a>
+                          <strong>Jiacheng Li</strong>, Yangwang Fang, Wenhui Ma, Zihao Wu, Shuaiqi Huangfu, Dengxiu Yu, and C. L. Philip Chen, &quot;UAV swarm coordination based on parallel control </a>,&quot; <i>IEEE Transactions on Cybernetics</i>, 2022(<strong>Top, SCI, IF:11.448</strong>) (Under review).    <a href="./JC_L_files/TCYB.pdf" download="TCYB2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 
 	
@@ -111,7 +110,7 @@
 <h3>Conference Papers</h3>
 <ol>
                <li>
-                         <strong>Jiacheng Li</strong>, Wei Lu, Yankai Li, Mengjie Zeng, Ling Wang, Yongnian Zhang &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9326587/authors#authors" target="_blank">Tractor steering teleoperation control with fuzzy PID algorithm based on delay time measurement with timestamp</a>,&quot; <i>Chinese Automation Congress (CAC)</i>, 2020 (EI, Reviewed by IEEE Xplore).      <a href="./JC_L_files/CAC2020.pdf" download="CAC2020ljc.pdf"><strong>PDF</strong></a>
+                         <strong>Jiacheng Li</strong>, Wei Lu, Yankai Li, Mengjie Zeng, Ling Wang, Yongnian Zhang &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9326587/authors#authors" target="_blank">Tractor steering teleoperation control with fuzzy PID algorithm based on delay time measurement with timestamp</a>,&quot; <i>Chinese Automation Congress (CAC)</i>, 2020 (EI, Reviewed by IEEE Xplore), doi: 10.1109/CAC51589.2020.9326587.      <a href="./JC_L_files/CAC2020.pdf" download="CAC2020ljc.pdf"><strong>PDF</strong></a>
 	</li>
                   <li>
                          <strong>Jiacheng Li</strong>, Yangwang Fang, et al &quot;Affine Transformation Control of UAV Formation based on Predetermined Time Convergence </a>,&quot; <i>2022 International Conference on Guidance,Navigation and Control (ICGGNC)</i>, 2022 (EI, Reviewed by IEEE Xplore) (Under review).       <a href="./JC_L_files/ICGNC.pdf" download="ICGNC2022ljc.pdf"><strong>PDF</strong></a>
@@ -126,7 +125,13 @@
                                       Wei Lu, <strong>Jiacheng Li</strong>, Hao chen, "A time delay control method for vehicle teleoperation based on time stamp "</a>,  CN Patent: CN 11348243 (in chinese) (First inventor is tutor).      <a href="./JC_L_files/CN1.pdf" download="CN12020ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
-                                      Wei Lu, <strong>Jiacheng Li</strong>,"An unmanned vehicle control method based on multi-driving mode switching"</a>,  CN Patent (in chinese) (has submitted) (First inventor is tutor).      <a href="./JC_L_files/CN2.pdf" download="CN22022ljc.pdf"><strong>PDF</strong></a>
+                                      Wei Lu, <strong>Jiacheng Li</strong>, "An unmanned vehicle control method based on multi-driving mode switching"</a>,  CN Patent (in chinese) (has submitted) (First inventor is tutor).      <a href="./JC_L_files/CN2.pdf" download="CN22022ljc.pdf"><strong>PDF</strong></a>
+	</li>
+	<li>
+                                      Yangwang Fang, <strong>Jiacheng Li</strong>, et al &quot, "An obstacle avoidance control strategy for fixed-wing UAV based on bird-like phototaxis"</a>,  CN Patent (in chinese) (has submitted) (First inventor is tutor).      <a href="./JC_L_files/CN3.pdf" download="CN22022ljc.pdf"><strong>PDF</strong></a>
+	</li>
+	<li>
+                                      Dengxiu Yu, <strong>Jiacheng Li</strong>, "A UAV formation transformation control method based on parallel control"</a>,  CN Patent (in chinese) (has submitted).      <a href="./JC_L_files/CN4.pdf" download="CN22022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 </ol>
 
@@ -142,10 +147,10 @@
                       2020.10-2021.12, Development of UAV formation collaborative flight control simulation system, <i>Xidian University</i>, Main participant.
                 </li>
                 <li>
-                      2021.12-present, Research on the UAV Autonomous Capability Assessment System for Combat Missions, <i>Air Force Engineering University</i>, Main participant.
+                      2021.12-present, Research on the UAV Autonomous Capability Assessment System, <i>Air Force Engineering University</i>, Main participant.
                 </li>
                 <li>
-                     2022.3-present, UAV test analysis and evaluation against simulation prototype verification research, <i>China Shipbuilding Industry System Engineering Research Institute</i>, Student in charge. 
+                      2022.3-present, UAV test analysis and evaluation simulation, <i>China Shipbuilding Industry System Engineering Research Institute</i>, Student in charge. 
                 </li>
 </ol>
 
