--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                          <strong>Jiacheng Li</strong>, Wei Lu, Yankai Li, Mengjie Zeng, Ling Wang, Yongnian Zhang &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9326587/authors#authors" target="_blank">Tractor steering teleoperation control with fuzzy PID algorithm based on delay time measurement with timestamp</a>,&quot; <i>Chinese Automation Congress (CAC)</i>, 2020 (EI, Reviewed by IEEE Xplore), doi: 10.1109/CAC51589.2020.9326587.      <a href="./JC_L_files/CAC2020.pdf" download="CAC2020ljc.pdf"><strong>PDF</strong></a>
 	</li>
                   <li>
-                         <strong>Jiacheng Li</strong>, Yangwang Fang, et al &quot;Affine Transformation Control of UAV Formation based on Predetermined Time Convergence </a>,&quot; <i>2022 International Conference on Guidance,Navigation and Control (ICGGNC)</i>, 2022 (EI, Reviewed by IEEE Xplore) (Under review).       <a href="./JC_L_files/ICGNC.pdf" download="ICGNC2022ljc.pdf"><strong>PDF</strong></a>
+                         <strong>Jiacheng Li</strong>, Yangwang Fang, et al &quot;Affine Transformation Control of UAV Formation based on Predetermined Time Convergence </a>,&quot; <i>2022 International Conference on Guidance,Navigation and Control (ICGGNC)</i>, 2022 (EI, Reviewed by IEEE Xplore) (Accepted, Awaiting Production).       <a href="./JC_L_files/ICGNC.pdf" download="ICGNC2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
                  
 
