--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                          Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;<a class="dhtgD aw5Odc" href="https://www.xml-journal.cn/xmlTypeset/wechatopen/articleFulltext/16169d2b53c843d2b1168dfd14e223a7dc9bcdba7011a070ef2e1da990c173a8" target="_blank">Dual-mode Control Method of Unmanned Tractor with High Reliability and Security</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022 (<strong>Top, SCI, IF:6.171</strong>) (First author is tutor) (Accepted, Awaiting Production).   <a href="./JC_L_files/IEEE CAA JAS.pdf" download="IEEE CAA JAS2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
-                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot;Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2021 (<strong>SCI, IF:3.931</strong>) (Under review).   <a href="./JC_L_files/ISJ.pdf" download="ISJ2021ljc.pdf"><strong>PDF</strong></a>
+                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot;Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2021 (<strong>SCI, IF:3.931</strong>) (Under review).   </a>
 	</li>
                  <li>
-                          <strong>Jiacheng Li</strong>, Yangwang Fang, Wenhui Ma, Zihao Wu, Shuaiqi Huangfu, Dengxiu Yu, and C. L. Philip Chen, &quot;UAV swarm coordination based on parallel control </a>,&quot; <i>IEEE Transactions on Cybernetics</i>, 2022(<strong>Top, SCI, IF:11.448</strong>) (Under review).    <a href="./JC_L_files/TCYB.pdf" download="TCYB2022ljc.pdf"><strong>PDF</strong></a>
+                          <strong>Jiacheng Li</strong>, Yangwang Fang, Wenhui Ma, Zihao Wu, Shuaiqi Huangfu, Dengxiu Yu, and C. L. Philip Chen, &quot;UAV swarm coordination based on parallel control </a>,&quot; <i>IEEE Transactions on Cybernetics</i>, 2022(<strong>Top, SCI, IF:11.448</strong>) (Under review).    </a>
 	</li>
 
 	
@@ -122,17 +122,15 @@
 <h3>Patents</h3>
 <ol>
 	<li>
-                                      Wei Lu, <strong>Jiacheng Li</strong>, Hao chen, "A time delay control method for vehicle teleoperation based on time stamp "</a>,  CN Patent: CN 11348243 (in chinese) (First inventor is tutor).      <a href="./JC_L_files/CN1.pdf" download="CN12020ljc.pdf"><strong>PDF</strong></a>
+                                      Wei Lu, <strong>Jiacheng Li</strong>, Hao chen, "A time delay control method for vehicle teleoperation based on time stamp "</a>,  CN Patent: CN 11348243 (in chinese) (First inventor is tutor).    </a>
 	</li>
 	<li>
-                                      Wei Lu, <strong>Jiacheng Li</strong>, "An unmanned vehicle control method based on multi-driving mode switching"</a>,  CN Patent (in chinese) (has submitted) (First inventor is tutor).      <a href="./JC_L_files/CN2.pdf" download="CN22022ljc.pdf"><strong>PDF</strong></a>
+                                      Wei Lu, <strong>Jiacheng Li</strong>, "An unmanned vehicle control method based on multi-driving mode switching"</a>,  CN Patent (in chinese) (has submitted) (First inventor is tutor).    </a>
 	</li>
 	<li>
-                                      Yangwang Fang, <strong>Jiacheng Li</strong>, et al &quot, "An obstacle avoidance control strategy for fixed-wing UAV based on bird-like phototaxis"</a>,  CN Patent (in chinese) (has submitted) (First inventor is tutor).      <a href="./JC_L_files/CN3.pdf" download="CN22022ljc.pdf"><strong>PDF</strong></a>
+                                      Yangwang Fang, <strong>Jiacheng Li</strong>, et al &quot, "An obstacle avoidance control strategy for fixed-wing UAV based on bird-like phototaxis"</a>,  CN Patent (in chinese) (has submitted) (First inventor is tutor). </a>
 	</li>
-	<li>
-                                      Dengxiu Yu, <strong>Jiacheng Li</strong>, "A UAV formation transformation control method based on parallel control"</a>,  CN Patent (in chinese) (has submitted).      <a href="./JC_L_files/CN4.pdf" download="CN22022ljc.pdf"><strong>PDF</strong></a>
-	</li>
+
 </ol>
 
 <h2>Participate in Research Projects</h2>
