--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
                           <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot;Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2021 (<strong>SCI, IF:3.931</strong>) (Under review).   </a>
 	</li>
                  <li>
-                          <strong>Jiacheng Li</strong>, Yangwang Fang, Wenhui Ma, Zihao Wu, Shuaiqi Huangfu, Dengxiu Yu, and C. L. Philip Chen, &quot;UAV swarm coordination based on parallel control </a>,&quot; <i>IEEE Transactions on Cybernetics</i>, 2022(<strong>Top, SCI, IF:11.448</strong>) (Under review).    </a>
+                          <strong>Jiacheng Li</strong>, Yangwang Fang, Wenhui Ma, Zihao Wu, Shuaiqi Huangfu, Dengxiu Yu, and C. L. Philip Chen, &quot;UAV swarm coordination based on parallel control </a>,&quot; <i>Information Sciences</i>, 2022(<strong>SCI, IF:6.795</strong>) (Under review).    </a>
 	</li>
-
-	
+                 <li>
+                          Shuaiqi Huangfu, <strong>Jiacheng Li</strong>, Dengxiu Yu, &quot;Stability-enhancing Control Method For MAV Based on Optimized Active Disturbance Rejection Control</a>,&quot; <i>Applied Mathematical Modelling</i>, 2022(<strong> SCI, IF:5.129</strong>) (Under review).    </a>
+	</li>	
 </ol>
 
 <h3>Conference Papers</h3>
