--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 <h3>Journal Papers</h3>
 <ol>
 	<li>
-                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot;Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022 (<strong>SCI, IF:1.956</strong>) (Accepted, Awaiting Production).   <a href="./JC_L_files/TIMC.pdf" download="TIMC2022ljc.pdf"><strong>PDF</strong></a>
+                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot;Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022, doi: https://doi.org/10.1177/01423312221100340 (<strong>SCI, IF:2.146</strong>).   <a href="./JC_L_files/TIMC.pdf" download="TIMC2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
                          Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">Dual-mode Control Method of Unmanned Tractor with High Reliability and Security</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022 (<strong>Top, SCI, IF:7.847</strong>) (First author is tutor) (Accepted, Awaiting Production).   <a href="./JC_L_files/IEEE CAA JAS.pdf" download="IEEE CAA JAS2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
-                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot;Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2021 (<strong>SCI, IF:3.931</strong>) (Under review).   </a>
+                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot;Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2021 (<strong>SCI, IF:4.802</strong>) (Under review).   </a>
 	</li>
                  <li>
                           <strong>Jiacheng Li</strong>, Yangwang Fang, Wenhui Ma, Zihao Wu, Shuaiqi Huangfu, Dengxiu Yu, and C. L. Philip Chen, &quot;UAV swarm coordination based on parallel control </a>,&quot; <i>Information Sciences</i>, 2022(<strong>SCI, IF:6.795</strong>) (Under review).    </a>
