--- a/index.html
+++ b/index.html
@@ -92,19 +92,20 @@
 <h3>Journal Papers</h3>
 <ol>
 	<li>
-                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot;Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022, doi: https://doi.org/10.1177/01423312221100340 (<strong>SCI, IF:2.146</strong>).   <a href="./JC_L_files/TIMC.pdf" download="TIMC2022ljc.pdf"><strong>PDF</strong></a>
+                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot;Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022, doi: https://doi.org/10.1177/01423312221100340 (<strong>SCI, IF:2.146, 中科院4区</strong>).   <a href="./JC_L_files/TIMC.pdf" download="TIMC2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
-                         Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">Dual-mode Control Method of Unmanned Tractor with High Reliability and Security</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022 (<strong>Top, SCI, IF:7.847</strong>) (First author is tutor) (Accepted, Awaiting Production).   <a href="./JC_L_files/IEEE CAA JAS.pdf" download="IEEE CAA JAS2022ljc.pdf"><strong>PDF</strong></a>
+                         Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">Dual-mode Control Method of Unmanned Tractor with High Reliability and Security</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022 (<strong>Top, SCI, IF:7.847, 中科院1区</strong>) (First author is tutor) doi: 10.1109/JAS.2022.000000. <a href="./JC_L_files/IEEE CAA JAS.pdf" download="IEEE CAA JAS2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
-                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot;Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2021 (<strong>SCI, IF:4.802</strong>) (Under review).   </a>
+                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot;Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2021 (<strong>SCI, IF:4.802, 中科院2区</strong>) (Accepted, Awaiting Production).    <a href="./JC_L_files/Largescale.pdf" download="ISJ2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
                  <li>
-                          <strong>Jiacheng Li</strong>, Yangwang Fang, Wenhui Ma, Zihao Wu, Shuaiqi Huangfu, Dengxiu Yu, and C. L. Philip Chen, &quot;UAV swarm coordination based on parallel control </a>,&quot; <i>Information Sciences</i>, 2022(<strong>SCI, IF:8.233</strong>) (Under review).    </a>
+                          <strong>Jiacheng Li</strong>, Yangwang Fang, Wenhui Ma, Zihao Wu, Shuaiqi Huangfu, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-free cooperation for UAV swarm based on parallel
+control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>, 2022(<strong>SCI, IF:3.897, 中科院1区</strong>) (Under review).    </a>
 	</li>
                  <li>
-                          Shuaiqi Huangfu, <strong>Jiacheng Li</strong>, Dengxiu Yu, &quot;Stability-enhancing Control Method For MAV Based on Optimized Active Disturbance Rejection Control</a>,&quot; <i>Applied Mathematical Modelling</i>, 2022(<strong>SCI, IF:5.129</strong>) (Under review).    </a>
+                          <strong>Jiacheng Li</strong>, Dengxiu Yu, &quot;Stability-enhancing Control Method For MAV Based on Optimized Active Disturbance Rejection Control</a>,&quot; <i>Applied Mathematical Modelling</i>, 2022(<strong>SCI, IF:5.129, 中科院1区</strong>) (Under minor revisions).    </a>
 	</li>	
 </ol>
 
@@ -123,13 +124,13 @@
 <h3>Patents</h3>
 <ol>
 	<li>
-                                      Wei Lu, <strong>Jiacheng Li</strong>, Hao chen, "A time delay control method for vehicle teleoperation based on time stamp "</a>,  CN Patent: CN 11348243 (in chinese) (First inventor is tutor).    </a>
+                                      卢伟，<strong>李家诚</strong>, 陈浩, "一种基于时间戳的车辆遥操作时延控制方法 "</a>,  CN Patent: CN 11348243 (First inventor is tutor).    </a>
 	</li>
 	<li>
-                                      Wei Lu, <strong>Jiacheng Li</strong>, "An unmanned vehicle control method based on multi-driving mode switching"</a>,  CN Patent (in chinese) (has submitted) (First inventor is tutor).    </a>
+                                      卢伟，<strong>李家诚</strong>, "一种基于多驾驶模式切换的无人车辆控制方法"</a>,  CN Patent (已受理) (First inventor is tutor).    </a>
 	</li>
 	<li>
-                                      Yangwang Fang, <strong>Jiacheng Li</strong>, et al &quot, "An obstacle avoidance control strategy for fixed-wing UAV based on bird-like phototaxis"</a>,  CN Patent (in chinese) (has submitted) (First inventor is tutor). </a>
+                                      方洋旺, <strong>李家诚</strong>, 张茂桃, 王志凯， 马文卉, "一种基于仿鸟类趋光性的固定翼无人机避障控制策略"</a>,  CN Patent：202210628154. X (已受理) (First inventor is tutor). </a>
 	</li>
 
 </ol>
