--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 <h3>Patents</h3>
 <ol>
 	<li>
-                                      卢伟，<strong>李家诚</strong>, 陈浩, "一种基于时间戳的车辆遥操作时延控制方法 "</a>,  CN Patent: CN 11348243 (First inventor is tutor).    </a>
+                                      卢伟, <strong>李家诚</strong>, 陈浩, "一种基于时间戳的车辆遥操作时延控制方法 "</a>,  CN Patent: CN 11348243 (First inventor is tutor).    </a>
 	</li>
 	<li>
-                                      卢伟，<strong>李家诚</strong>, "一种基于多驾驶模式切换的无人车辆控制方法"</a>,  CN Patent (已受理) (First inventor is tutor).    </a>
+                                      卢伟, <strong>李家诚</strong>, "一种基于多驾驶模式切换的无人车辆控制方法"</a>,  CN Patent (已受理) (First inventor is tutor).    </a>
 	</li>
 	<li>
-                                      方洋旺, <strong>李家诚</strong>, 张茂桃, 王志凯， 马文卉, "一种基于仿鸟类趋光性的固定翼无人机避障控制策略"</a>,  CN Patent：202210628154. X (已受理) (First inventor is tutor). </a>
+                                      方洋旺, <strong>李家诚</strong>, 张茂桃, 王志凯, 马文卉, "一种基于仿鸟类趋光性的固定翼无人机避障控制策略"</a>,  CN Patent：202210628154. X (已受理) (First inventor is tutor). </a>
 	</li>
 
 </ol>
