--- a/index.html
+++ b/index.html
@@ -162,6 +162,13 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 	</li>
 </ol>
 
+<h2>Manuscript Review works</h2>
+<ol>
+	<li>
+                     Reviewer of Chinese Automation Congress (CAC2021, CAC2022).
+               </li>
+</ol>
+
 <h2>Work Presentations</h2>
 <ul>
 	<li>
