--- a/index.html
+++ b/index.html
@@ -91,21 +91,21 @@
 <h2>Publications</h2>
 <h3>Journal Papers</h3>
 <ol>
+       <li>
+                          <strong>Jiacheng Li</strong>,  Junmin Liu, Shuaiqi Huangfu, Guoyan Cao, and Dengxiu Yu, &quot; <a class="dhtgD aw5Odc" href="https://www.sciencedirect.com/science/article/pii/S0307904X22006114" target="_blank">Leader-follower Formation of Light-weight UAVs with Novel Active Disturbance Rejection Control</a>,&quot; <i>Applied Mathematical Modelling</i>, 2022, doi: https://doi.org/10.1016/j.apm.2022.12.032. (<strong>SCI, IF:5.129, 中科院1区</strong>)  </a>
+	</li>
 	<li>
-                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot;Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022, doi: https://doi.org/10.1177/01423312221100340 (<strong>SCI, IF:2.146, 中科院4区</strong>).   <a href="./JC_L_files/TIMC.pdf" download="TIMC2022ljc.pdf"><strong>PDF</strong></a>
+                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot; <a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9928314" target="_blank">Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2021 (<strong>SCI, IF:4.802, 中科院2区</strong>) (Accepted, Awaiting Production).    <a href="./JC_L_files/Largescale.pdf" download="ISJ2022ljc.pdf"><strong>PDF</strong></a>
+	</li>
+	<li>
+                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot; <a class="dhtgD aw5Odc" href="https://journals.sagepub.com/doi/full/10.1177/01423312221100340" target="_blank">Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022, doi: https://doi.org/10.1177/01423312221100340 (<strong>SCI, IF:2.146, 中科院4区</strong>).   <a href="./JC_L_files/TIMC.pdf" download="TIMC2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
                          Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">Dual-mode Control Method of Unmanned Tractor with High Reliability and Security</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022 (<strong>Top, SCI, IF:7.847, 中科院1区</strong>) (First author is tutor) doi: 10.1109/JAS.2022.000000. <a href="./JC_L_files/IEEE CAA JAS.pdf" download="IEEE CAA JAS2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
-	<li>
-                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot;Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2021 (<strong>SCI, IF:4.802, 中科院2区</strong>) (Accepted, Awaiting Production).    <a href="./JC_L_files/Largescale.pdf" download="ISJ2022ljc.pdf"><strong>PDF</strong></a>
-	</li>
                  <li>
                           <strong>Jiacheng Li</strong>, Yangwang Fang, Wenhui Ma, Zihao Wu, Shuaiqi Huangfu, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-free cooperation for UAV swarm based on parallel
 control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>, 2022(<strong>SCI, IF:3.897, 中科院1区</strong>) (Under review).    </a>
-	</li>
-                 <li>
-                          <strong>Jiacheng Li</strong>, Dengxiu Yu, &quot;Stability-enhancing Control Method For MAV Based on Optimized Active Disturbance Rejection Control</a>,&quot; <i>Applied Mathematical Modelling</i>, 2022(<strong>SCI, IF:5.129, 中科院1区</strong>) (Under minor revisions).    </a>
 	</li>	
 </ol>
 
@@ -115,7 +115,7 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
                          <strong>Jiacheng Li</strong>, Wei Lu, Yankai Li, Mengjie Zeng, Ling Wang, Yongnian Zhang &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9326587/authors#authors" target="_blank">Tractor steering teleoperation control with fuzzy PID algorithm based on delay time measurement with timestamp</a>,&quot; <i>Chinese Automation Congress (CAC)</i>, 2020 (EI, Reviewed by IEEE Xplore), doi: 10.1109/CAC51589.2020.9326587.      <a href="./JC_L_files/CAC2020.pdf" download="CAC2020ljc.pdf"><strong>PDF</strong></a>
 	</li>
                   <li>
-                         <strong>Jiacheng Li</strong>, Yangwang Fang, et al &quot;Affine Transformation Control of UAV Formation based on Predetermined Time Convergence </a>,&quot; <i>2022 International Conference on Guidance,Navigation and Control (ICGGNC)</i>, 2022 (EI, Reviewed by IEEE Xplore) (Accepted, Awaiting Production).       <a href="./JC_L_files/ICGNC.pdf" download="ICGNC2022ljc.pdf"><strong>PDF</strong></a>
+                         <strong>Jiacheng Li</strong>, Yangwang Fang, et al &quot;Affine Transformation Control of UAV Formation based on Predetermined Time Convergence </a>,&quot; <i>2022 International Conference on Guidance,Navigation and Control (ICGGNC)</i>, 2022，doi: https://doi.org/10.1007/978-981-19-6613-2_434 (EI, Reviewed by IEEE Xplore) (Accepted, Awaiting Production).       <a href="./JC_L_files/ICGNC.pdf" download="ICGNC2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
                  
 
@@ -127,7 +127,7 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
                                       卢伟, <strong>李家诚</strong>, 陈浩, "一种基于时间戳的车辆遥操作时延控制方法 "</a>,  CN Patent: CN 11348243 (First inventor is tutor).    </a>
 	</li>
 	<li>
-                                      卢伟, <strong>李家诚</strong>, "一种基于多驾驶模式切换的无人车辆控制方法"</a>,  CN Patent (已受理) (First inventor is tutor).    </a>
+                                      卢伟, <strong>李家诚</strong>, "一种基于多驾驶模式切换的无人车辆控制方法"</a>,  CN Patent：202010438526 .3 (已受理) (First inventor is tutor).    </a>
 	</li>
 	<li>
                                       方洋旺, <strong>李家诚</strong>, 张茂桃, 王志凯, 马文卉, "一种基于仿鸟类趋光性的固定翼无人机避障控制策略"</a>,  CN Patent：202210628154. X (已受理) (First inventor is tutor). </a>
@@ -203,13 +203,17 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 		Unmanned driving robot of tractor.
 	</li>
 	<td><img src="./JC_L_files/robot.png" border="0" height="280"><br></td>
+                 <li>
+		Unmanned driving robot of tractor.
+	</li>
+	<td><img src="./JC_L_files/Leaderfollower.jpg" border="0" height="200"><br></td>
 	
 </ul>
 
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-	<center>© Jiacheng Li | Last updated: 5/2022</center>
+	<center>© Jiacheng Li | Last updated: 1/2023</center>
     <!--<center>© Jiacheng Li
     	<script type="text/javascript" language="javascript">
     	if (Date.parse(document.lastModified) != 0) document.write(" | Last updated: " + document.lastModified);</script>
