--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                           <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot; <a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9928314" target="_blank">Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2021 (<strong>SCI, IF:4.802, 中科院2区</strong>) (Accepted, Awaiting Production).    <a href="./JC_L_files/Largescale.pdf" download="ISJ2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
-                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot; <a class="dhtgD aw5Odc" href="https://journals.sagepub.com/doi/full/10.1177/01423312221100340" target="_blank">Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022, doi: https://doi.org/10.1177/01423312221100340 (<strong>SCI, IF:2.146, 中科院4区</strong>).   <a href="./JC_L_files/TIMC.pdf" download="TIMC2022ljc.pdf"><strong>PDF</strong></a>
+                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot; <a class="dhtgD aw5Odc" href="https://journals.sagepub.com/doi/full/10.1177/01423312221100340" target="_blank">Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field</a>,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022, doi: https://doi.org/10.1177/01423312221100340 (<strong>SCI, IF:2.146, 中科院4区</strong>).   <a href="./JC_L_files/TIMC.pdf" download="TIMC2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
                          Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">Dual-mode Control Method of Unmanned Tractor with High Reliability and Security</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022 (<strong>Top, SCI, IF:7.847, 中科院1区</strong>) (First author is tutor) doi: 10.1109/JAS.2022.000000. <a href="./JC_L_files/IEEE CAA JAS.pdf" download="IEEE CAA JAS2022ljc.pdf"><strong>PDF</strong></a>
@@ -112,7 +112,7 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 <h3>Conference Papers</h3>
 <ol>
                <li>
-                         <strong>Jiacheng Li</strong>, Wei Lu, Yankai Li, Mengjie Zeng, Ling Wang, Yongnian Zhang &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9326587/authors#authors" target="_blank">Tractor steering teleoperation control with fuzzy PID algorithm based on delay time measurement with timestamp</a>,&quot; <i>Chinese Automation Congress (CAC)</i>, 2020 (EI, Reviewed by IEEE Xplore), doi: 10.1109/CAC51589.2020.9326587.      <a href="./JC_L_files/CAC2020.pdf" download="CAC2020ljc.pdf"><strong>PDF</strong></a>
+                         <strong>Jiacheng Li</strong>, Wei Lu, Yankai Li, Mengjie Zeng, Ling Wang, Yongnian Zhang &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9326587/authors#authors" target="_blank">Tractor steering teleoperation control with fuzzy PID algorithm based on delay time measurement with timestamp</a>,&quot; <i>Chinese Automation Congress (CAC)</i>, 2020，doi: 10.1109/CAC51589.2020.9326587.  (EI, Reviewed by IEEE Xplore), <a href="./JC_L_files/CAC2020.pdf" download="CAC2020ljc.pdf"><strong>PDF</strong></a>
 	</li>
                   <li>
                          <strong>Jiacheng Li</strong>, Yangwang Fang, et al &quot;Affine Transformation Control of UAV Formation based on Predetermined Time Convergence </a>,&quot; <i>2022 International Conference on Guidance,Navigation and Control (ICGGNC)</i>, 2022，doi: https://doi.org/10.1007/978-981-19-6613-2_434 (EI, Reviewed by IEEE Xplore) (Accepted, Awaiting Production).       <a href="./JC_L_files/ICGNC.pdf" download="ICGNC2022ljc.pdf"><strong>PDF</strong></a>
@@ -204,9 +204,9 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 	</li>
 	<td><img src="./JC_L_files/robot.png" border="0" height="280"><br></td>
                  <li>
-		Unmanned driving robot of tractor.
+		Leader-follower Formation control
 	</li>
-	<td><img src="./JC_L_files/Leaderfollower.jpg" border="0" height="200"><br></td>
+	<td><img src="./JC_L_files/Leaderfollower.jpg" border="0" height="350"><br></td>
 	
 </ul>
 
