--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                           <strong>Jiacheng Li</strong>,  Junmin Liu, Shuaiqi Huangfu, Guoyan Cao, and Dengxiu Yu, &quot; <a class="dhtgD aw5Odc" href="https://www.sciencedirect.com/science/article/pii/S0307904X22006114" target="_blank">Leader-follower Formation of Light-weight UAVs with Novel Active Disturbance Rejection Control</a>,&quot; <i>Applied Mathematical Modelling</i>, 2022, doi: https://doi.org/10.1016/j.apm.2022.12.032. (<strong>SCI, IF:5.129, 中科院1区</strong>)  </a>
 	</li>
 	<li>
-                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot; <a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9928314" target="_blank">Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2021 (<strong>SCI, IF:4.802, 中科院2区</strong>) (Accepted, Awaiting Production).    <a href="./JC_L_files/Largescale.pdf" download="ISJ2022ljc.pdf"><strong>PDF</strong></a>
+                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot; <a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9928314" target="_blank">Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2022, doi: 10.1109/JSYST.2022.3212068 (<strong>SCI, IF:4.802, 中科院2区</strong>)  <a href="./JC_L_files/Largescale.pdf" download="ISJ2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot; <a class="dhtgD aw5Odc" href="https://journals.sagepub.com/doi/full/10.1177/01423312221100340" target="_blank">Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field</a>,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022, doi: https://doi.org/10.1177/01423312221100340 (<strong>SCI, IF:2.146, 中科院4区</strong>).   <a href="./JC_L_files/TIMC.pdf" download="TIMC2022ljc.pdf"><strong>PDF</strong></a>
@@ -148,9 +148,6 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
                 </li>
                 <li>
                       2021.12-present, Research on the UAV Autonomous Capability Assessment System, <i>Air Force Engineering University</i>, Main participant.
-                </li>
-                <li>
-                      2022.3-present, UAV test analysis and evaluation simulation, <i>China Shipbuilding Industry System Engineering Research Institute</i>, Student in charge. 
                 </li>
 </ol>
 
