--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot; <a class="dhtgD aw5Odc" href="https://journals.sagepub.com/doi/full/10.1177/01423312221100340" target="_blank">Unmanned aerial vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field</a>,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022, doi: https://doi.org/10.1177/01423312221100340 (<strong>SCI, IF:2.146, 中科院4区</strong>).   <a href="./JC_L_files/TIMC.pdf" download="TIMC2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
 	<li>
-                         Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">Dual-mode Control Method of Unmanned Tractor with High Reliability and Security</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022 (<strong>Top, SCI, IF:7.847, 中科院1区</strong>) (First author is tutor) doi: 10.1109/JAS.2022.000000. <a href="./JC_L_files/IEEE CAA JAS.pdf" download="IEEE CAA JAS2022ljc.pdf"><strong>PDF</strong></a>
+                         Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">Dual-mode Control Method of Unmanned Tractor with High Reliability and Security</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022，doi: 10.1109/JAS.2022.000000.(<strong>Top, SCI, IF:7.847, 中科院1区</strong>) (First author is tutor)  <a href="./JC_L_files/IEEE CAA JAS.pdf" download="IEEE CAA JAS2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
                  <li>
                           <strong>Jiacheng Li</strong>, Yangwang Fang, Wenhui Ma, Zihao Wu, Shuaiqi Huangfu, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-free cooperation for UAV swarm based on parallel
@@ -118,8 +118,15 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
                          <strong>Jiacheng Li</strong>, Yangwang Fang, et al &quot;Affine Transformation Control of UAV Formation based on Predetermined Time Convergence </a>,&quot; <i>2022 International Conference on Guidance,Navigation and Control (ICGGNC)</i>, 2022，doi: https://doi.org/10.1007/978-981-19-6613-2_434 (EI, Reviewed by IEEE Xplore) (Accepted, Awaiting Production).       <a href="./JC_L_files/ICGNC.pdf" download="ICGNC2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
                  
-
 </ol>
+
+<h3>Cooperative Papers</h3>
+<ol>
+               <li>
+                         Mengjie Zeng, Shunming Li, Ranran Li, <strong>Jiacheng Li</strong>, Kun Xu, Xianglian Li &quot;<a class="dhtgD aw5Odc" href="https://iopscience.iop.org/article/10.1088/1361-6501/ac8dae" target="_blank">A Transfer Learning Fault Diagnosis Method Considering Nearest Neighbor Feature Constraints</a>,&quot; <i>Measurement Science and Technology</i>, 2022，doi: 10.1088/1361-6501/ac8dae. (<strong>SCI, IF:2.398, 中科院3区</strong>) , <a href="./JC_L_files/MST.pdf" download="CAC2020ljc.pdf"><strong>PDF</strong></a>
+	</li>             
+    
+</ol></h3>
 
 <h3>Patents</h3>
 <ol>
@@ -147,7 +154,7 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
                       2020.10-2021.12, Development of UAV formation collaborative flight control simulation system, <i>Xidian University</i>, Main participant.
                 </li>
                 <li>
-                      2021.12-present, Research on the UAV Autonomous Capability Assessment System, <i>Air Force Engineering University</i>, Main participant.
+                      2021.12-2022,12, Research on the UAV Autonomous Capability Assessment System, <i>Air Force Engineering University</i>, Main participant.
                 </li>
 </ol>
 
