--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 <h3>Cooperative Papers</h3>
 <ol>
                <li>
-                         Mengjie Zeng, Shunming Li, Ranran Li, <strong>Jiacheng Li</strong>, Kun Xu, Xianglian Li &quot;<a class="dhtgD aw5Odc" href="https://iopscience.iop.org/article/10.1088/1361-6501/ac8dae" target="_blank">A Transfer Learning Fault Diagnosis Method Considering Nearest Neighbor Feature Constraints</a>,&quot; <i>Measurement Science and Technology</i>, 2022，doi: 10.1088/1361-6501/ac8dae. (<strong>SCI, IF:2.398, 中科院3区</strong>) , <a href="./JC_L_files/MST.pdf" download="CAC2020ljc.pdf"><strong>PDF</strong></a>
+                         Mengjie Zeng, Shunming Li, Ranran Li, <strong>Jiacheng Li</strong>, Kun Xu, Xianglian Li &quot;<a class="dhtgD aw5Odc" href="https://iopscience.iop.org/article/10.1088/1361-6501/ac8dae" target="_blank">A Transfer Learning Fault Diagnosis Method Considering Nearest Neighbor Feature Constraints</a>,&quot; <i>Measurement Science and Technology</i>, 2022，doi: 10.1088/1361-6501/ac8dae. (<strong>SCI, IF:2.398, 中科院3区</strong>) , <a href="./JC_L_files/MST.pdf" download="MST.pdf"><strong>PDF</strong></a>
 	</li>             
     
 </ol></h3>
