--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
                   <li>
                          <strong>Jiacheng Li</strong>, Yangwang Fang, et al &quot;Affine Transformation Control of UAV Formation based on Predetermined Time Convergence </a>,&quot; <i>2022 International Conference on Guidance,Navigation and Control (ICGGNC)</i>, 2022，doi: https://doi.org/10.1007/978-981-19-6613-2_434 (EI, Reviewed by IEEE Xplore) (Accepted, Awaiting Production).       <a href="./JC_L_files/ICGNC.pdf" download="ICGNC2022ljc.pdf"><strong>PDF</strong></a>
 	</li>
+                <li>
+                          <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Yangwang Fang, Hao Wang and Yan-Jun Liu, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under Dos attack via Cloud-Fog Computing </a>,&quot; <i>IEEE Transactions on Network Science and Engineering</i>, 2023(<strong>SCI, IF:5.033, 中科院2区</strong>) (Under review).    </a>
+        </li>
+                <li>
+                          Dengxiu Yu, <strong>Jiacheng Li</strong>, Zhen Wang and Xuelong Li, &quot; An Overview of Swarm Coordinated Control </a>,&quot; <i>IEEE Transactions on Artificial Intelligence</i>, 2023 (Under review).    </a>
+        </li>
                  
 </ol>
 
@@ -138,6 +144,12 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 	</li>
 	<li>
                                       方洋旺, <strong>李家诚</strong>, 张茂桃, 王志凯, 马文卉, "一种基于仿鸟类趋光性的固定翼无人机避障控制策略"</a>,  CN Patent：202210628154. X (已受理) (First inventor is tutor). </a>
+	</li>
+	<li>
+                                      符文星, <strong>李家诚</strong>, 吴自豪, "一种预定时间收敛的非线性系统控制方法"</a>,  CN Patent：(已提交) (First inventor is tutor). </a>
+	</li>
+	<li>
+                                      符文星, <strong>李家诚</strong>, 吴自豪, "一种基于双射变换的无人机集群转弯策略"</a>,  CN Patent：(已提交) (First inventor is tutor). </a>
 	</li>
 
 </ol>
@@ -211,6 +223,10 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 		Leader-follower Formation control
 	</li>
 	<td><img src="./JC_L_files/Leaderfollower.jpg" border="0" height="350"><br></td>
+	 <li>
+		Cooperative Control of Swarm System under Dos attack via Cloud-Fog Computing
+	</li>
+	<td><img src="./JC_L_files/CloudFogComputing.jpg" border="0" height="300"><br></td>
 	
 </ul>
 
