--- a/index.html
+++ b/index.html
@@ -129,8 +129,10 @@ control </a>,&quot; <i>International Journal of Robust and Nonlinear Control</i>
 <ol>
                <li>
                          Mengjie Zeng, Shunming Li, Ranran Li, <strong>Jiacheng Li</strong>, Kun Xu, Xianglian Li &quot;<a class="dhtgD aw5Odc" href="https://iopscience.iop.org/article/10.1088/1361-6501/ac8dae" target="_blank">A Transfer Learning Fault Diagnosis Method Considering Nearest Neighbor Feature Constraints</a>,&quot; <i>Measurement Science and Technology</i>, 2022，doi: 10.1088/1361-6501/ac8dae. (<strong>SCI, IF:2.398, 中科院3区</strong>) , <a href="./JC_L_files/MST.pdf" download="MST.pdf"><strong>PDF</strong></a>
-	</li>             
-    
+	</li>     
+	       <li>
+                         黄号, 马文卉, <strong>李家诚</strong>, 方洋旺,  &quot; 未知环境下无人机编队智能避障控制方法 </a>,&quot; <i>清华大学学报（自然科学版）</i>, 2023 (Under review).    </a>
+         </li>  
 </ol></h3>
 
 <h3>Patents</h3>
